--- a/css/ui.totop.css
+++ b/css/ui.totop.css
@@ -27,7 +27,7 @@
 }
 #toTop:hover {
   outline: none;
-  background: #73cfff;
+  background: #57BE45;
   color: #ffffff;
 }
 /*Core variables and mixins*/
